added swagger docs for Auth and Stores
